<resources>
    <string name="app_name">Quiz App</string>
    <string name="str_app_heading">2014 World Football Cup quiz</string>
    <string name="str_question_one">1. Which player has scored the most World Cup goals?</string>
    <string name="str_qst_one_opt1">Just Justo Fontaine (France)</string>
    <string name="str_qst_one_opt2">Diego Maradona (Argentina)</string>
    <string name="str_qst_one_opt3">Miroslav Klose (Germany)</string>
    <string name="str_qst_one_opt4">Ronaldo Luís Nazário de Lima (Brazil)</string>
    <string name="str_question_two">2. True or false? Women were once banned from playing soccer in Brazil.</string>
    <string name="str_qst_two_opt1">True</string>
    <string name="str_qst_two_opt2">False</string>
    <string name="str_submit">Submit</string>
    <string name="str_question_three">3. Which country has won the most World Cups?</string>
    <string name="str_qst_three_opt1">Italy</string>
    <string name="str_qst_three_opt2">Brazil</string>
    <string name="str_qst_three_opt3">Germany</string>
    <string name="str_qst_three_opt4">Argentina</string>
    <string name="str_question_four">4. What is the World Cup most valuable player award called?</string>
    <string name="str_qst_four_opt1">The Pelé Prize</string>
    <string name="str_qst_four_opt2">The Beckenbauer Bust</string>
    <string name="str_qst_four_opt3">The Golden Boot</string>
    <string name="str_qst_four_opt4">The Golden Ball</string>
    <string name="str_question_five">5. Which country hosted the first World Cup tournament?</string>
    <string name="str_qst_five_opt1">United States</string>
    <string name="str_qst_five_opt2">Britain</string>
    <string name="str_qst_five_opt3">Uruguay</string>
    <string name="str_qst_five_opt4">Italy</string>
    <string name="str_question_six">6. Which of the following is a popular World Cup Brazil hashtag used on social media?</string>
    <string name="str_qst_six_opt1">#CopadasCopas (The Cup of all Cups)</string>
    <string name="str_qst_six_opt2">#ImaginaNaCopa (Just imagine during the World Cup)</string>
    <string name="str_qst_six_opt3">#CopaPraQuem (The World Cup for whom)</string>
    <string name="str_qst_six_opt4">#RumoAoHexa (Road to the sixth)</string>
    <string name="str_qst_six_opt5">All of the above</string>
    <string name="str_question_seven">7. Which country hosted the 2014 FIFA world cup final tournament?</string>
    <string name="str_hint">Answer here ...</string>
    <string-array name="countries_array">
        <item>England</item>
        <item>Brasil</item>
        <item>Germany</item>
        <item>America</item>
        <item>Spain</item>
        <item>France</item>
        <item>Italy</item>
        <item>Portugal</item>
    </string-array>
</resources>
